--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -458,6 +458,7 @@ jobs:
   sanitizers:
     runs-on: ubuntu-latest
     needs: build-rlib-x86_64
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'schedule' || contains(github.event.head_commit.message, '[sanitize]')
     steps:
       - uses: actions/checkout@v4
       - name: Cache cargo registry
