--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -153,12 +153,12 @@ jobs:
     needs: build-rlib-x86_64
     container: quay.io/pypa/manylinux_2_28_x86_64
     env:
-      CARGO_HOME: /github/workspace/.cache/cargo
-      RUSTUP_HOME: /github/workspace/.cache/rustup
-      PIP_CACHE_DIR: /github/workspace/.cache/pip
+      CARGO_HOME: ${{ github.workspace }}/.cache/cargo
+      RUSTUP_HOME: ${{ github.workspace }}/.cache/rustup
+      PIP_CACHE_DIR: ${{ github.workspace }}/.cache/pip
       CARGO_INCREMENTAL: 0
       RUSTC_WRAPPER: sccache
-      SCCACHE_DIR: /github/workspace/.cache/sccache
+      SCCACHE_DIR: ${{ github.workspace }}/.cache/sccache
       SCCACHE_CACHE_SIZE: 2G
     steps:
       - uses: actions/checkout@v4
@@ -181,7 +181,7 @@ jobs:
       - name: Build Python binding (x86_64) - manylinux
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
-          export PATH="/github/workspace/.cache/cargo/bin:$PATH"
+          export PATH="${{ github.workspace }}/.cache/cargo/bin:$PATH"
           curl -L https://github.com/mozilla/sccache/releases/download/v0.8.1/sccache-v0.8.1-x86_64-unknown-linux-musl.tar.gz | tar xz
           mv sccache-*/sccache /usr/local/bin/
           chmod +x /usr/local/bin/sccache
