--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,7 @@ on:
 
 jobs:
   lint:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Cache cargo registry
@@ -41,10 +38,7 @@ jobs:
         run: cargo clippy --all-targets --all-features -- -D warnings
 
   tests:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: lint
     steps:
       - uses: actions/checkout@v4
@@ -68,10 +62,7 @@ jobs:
         run: ./scripts/test-in-docker.sh
 
   build-rlib-x86_64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: lint
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
@@ -110,10 +101,7 @@ jobs:
           path: target/
 
   build-node-x86_64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: build-rlib-x86_64
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
@@ -163,10 +151,7 @@ jobs:
           path: artifacts/x86_64
 
   build-python-x86_64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: build-rlib-x86_64
     container: quay.io/pypa/manylinux_2_28_x86_64
     env:
@@ -214,10 +199,7 @@ jobs:
           path: artifacts/x86_64
 
   build-java-x86_64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: build-rlib-x86_64
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
@@ -263,10 +245,7 @@ jobs:
           path: artifacts/x86_64
 
   build-dotnet-x86_64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: build-rlib-x86_64
     env:
       CARGO_HOME: ${{ github.workspace }}/.cache/cargo
@@ -315,10 +294,7 @@ jobs:
           path: artifacts/x86_64
 
   build-ffi-x86_64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: build-rlib-x86_64
     steps:
       - uses: actions/checkout@v4
@@ -340,10 +316,7 @@ jobs:
           path: artifacts/x86_64
 
   package-x86_64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: [build-ffi-x86_64, build-node-x86_64, build-python-x86_64, build-dotnet-x86_64, build-java-x86_64]
     steps:
       - name: Download all x86_64 artifacts
@@ -364,10 +337,7 @@ jobs:
           path: artifacts/x86_64
 
   arm64-test-image:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: lint
     env:
       CACHE_MAX_AGE_DAYS: 7
@@ -430,10 +400,7 @@ jobs:
           path: /tmp/asherah-tests-arm64.tar
 
   tests-arm64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs:
       - package-arm64
       - arm64-test-image
@@ -497,10 +464,7 @@ jobs:
         run: ./scripts/test-in-docker.sh
 
   sanitizers:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: build-rlib-x86_64
     if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'schedule' || contains(github.event.head_commit.message, '[sanitize]')
     steps:
@@ -539,10 +503,7 @@ jobs:
           valgrind --error-exitcode=1 cargo test -p asherah-ffi --lib
 
   build-rlib-arm64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: lint
     container: rust:1.86-bullseye
     env:
@@ -596,10 +557,7 @@ jobs:
           path: target/
 
   build-node-arm64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: build-rlib-arm64
     container: rust:1.86-bullseye
     env:
@@ -660,10 +618,7 @@ jobs:
           path: artifacts/aarch64
 
   build-python-arm64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: build-rlib-arm64
     container: rust:1.86-bullseye
     env:
@@ -726,10 +681,7 @@ jobs:
           path: artifacts/aarch64
 
   build-java-arm64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: build-rlib-arm64
     container: rust:1.86-bullseye
     env:
@@ -786,10 +738,7 @@ jobs:
           path: artifacts/aarch64
 
   build-dotnet-arm64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: build-rlib-arm64
     container: rust:1.86-bullseye
     env:
@@ -850,10 +799,7 @@ jobs:
           path: artifacts/aarch64
 
   build-ffi-arm64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: build-rlib-arm64
     steps:
       - uses: actions/checkout@v4
@@ -875,10 +821,7 @@ jobs:
           path: artifacts/aarch64
 
   package-arm64:
-    runs-on:
-      - self-hosted
-      - X64
-      - Linux
+    runs-on: ubuntu-latest
     needs: [build-ffi-arm64, build-node-arm64, build-python-arm64, build-dotnet-arm64, build-java-arm64]
     steps:
       - name: Download all arm64 artifacts
