chore: rename package from asherah-node to asherah for npm publish
- Package name must match existing npm package 'asherah'
- Successfully published asherah@4.0.0 to npm
- 4 platforms: macOS ARM64/x64, Linux x64/ARM64
- 28.5 MB package size
- All tests passing

--- a/asherah-node/package.json
+++ b/asherah-node/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "asherah-node",
+  "name": "asherah",
   "version": "4.0.0",
   "private": false,
-  "description": "Node.js addon for Asherah (napi-rs)",
+  "description": "Asherah envelope encryption and key rotation library",
   "main": "npm/index.js",
   "types": "index.d.ts",
   "files": [
