--- a/asherah-node/package.json
+++ b/asherah-node/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asherah",
-  "version": "4.0.0",
+  "version": "4.0.0-beta.1",
   "private": false,
   "description": "Asherah envelope encryption and key rotation library",
   "main": "npm/index.js",
