Fix npm-publish workflow missing napi cli

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,10 +21,12 @@ jobs:
         with:
           node-version: 20
           registry-url: 'https://registry.npmjs.org'
+      - name: Install npm dependencies
+        working-directory: asherah-node
+        run: npm ci --ignore-scripts
       - name: Publish to npm
         working-directory: asherah-node
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           npm publish --access public
-
