--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -34,7 +34,7 @@ jobs:
               sudo apt-get update
               sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
               npm ci
-              npm run build -- --target aarch64-unknown-linux-gnu --use-napi-cross
+              npm run build -- --target aarch64-unknown-linux-gnu
           - host: macos-latest
             target: x86_64-apple-darwin
             build: |
