--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -33,6 +33,7 @@ jobs:
               set -e
               sudo apt-get update
               sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+              rustup target add aarch64-unknown-linux-gnu
               npm ci
               npm run build -- --target aarch64-unknown-linux-gnu
           - host: macos-latest
